# example-package-myname

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/example_package_myname/: rescale.py
tests/: test_rescale.py
